# kaist_capstone_design1_2021

./: README.md  lidar_node.cpp
ball_detection/: CMakeLists.txt
ball_detection/launch/: ballbonus.launch  ballmain.launch
ball_detection/src/: ball_detect.cpp  ball_detect_tB.cpp
coppeliasim_models/: BFinal.ttm  BRealFinal.ttm  B_solgrip.ttm  ROBOTTTTTTT.ttm  RobotB.ttm  map_no_pole.ttt  map_no_pole_final.ttt  map_ver5.ttt
coppeliasim_models/final_model_B/: B_final.ttm  B_finaljointstate.ttm
core_msgs/: CMakeLists.txt
core_msgs/msg/: ball_position.msg  lane_position.msg
data_integrate/: CMakeLists.txt  package.xml
data_integrate/launch/: bonus_mission.launch  data.launch  main_mission.launch  test.txt
data_integrate/src/: CMakeLists.txt  data_integration.cpp  data_integration_tB.cpp  data_show.cpp  line_tracing.cpp
depth_node/: CMakeLists.txt  package.xml
depth_node/launch/: depth.launch
depth_node/src/: depth_node.cpp
lane_detection/: CMakeLists.txt  package.xml
lane_detection/launch/: line.launch
lane_detection/src/: lane_detect.cpp
launch/: Command list_bonus  Command list_main  bonus_mission.launch  main_mission.launch
lidar_node/: CMakeLists.txt  package.xml
lidar_node/src/: lidar_node.cpp
