<?xml version="1.0"?>
<package format="2">
  <name>lidar_node</name>
  <version>1.0.0</version>
  <description>lidar node package</description>

  <maintainer email="cjysk@kaist.ac.kr">ME492</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>

  </export>
</package>
